# pomodorino

./: .gitignore  COPYING.CC0  Readme.markdown  pyproject.toml  requirements.txt  run.sh  setup.py
.github/: FUNDING.yml
.github/workflows/: build.yml  debianpkg.yml
assets/: logo.xcf  pomodorino.desktop
data/: com.gkayaalp.pomodorino.gschema.xml
debian/: changelog  control  copyright  debhelper-build-stamp  rules
debian/source/: options
doc/: pomodorino.1.markdown
po/: compile.report  it.po  pomodorino.pot  tr.po
pomodorino/: __init__.py  app.py  common.py  gui.py  indicator.py  mainwindow.py  settingsmodal.py
scripts/: appimage.bash  compare-with-pot.sh  compile-docs.bash  compile-po.sh  compile-translations.bash  diff-translations.bash  refresh-translations.bash  resize-logo.bash  update-pot.sh  update_pot.sh  version.bash
src/pomodorino/: app.py  indicator.py  settingsmodal.py
